[gd_scene load_steps=7 format=3 uid="uid://i3n7ss0yaewi"]

[ext_resource type="Script" uid="uid://c4tic46yygvmc" path="res://scripts/name_entry_scene.gd" id="1_55lrj"]
[ext_resource type="FontFile" uid="uid://baawqnj073dtx" path="res://AstronBoyWonder.ttf" id="2_o3jn4"]
[ext_resource type="Texture2D" uid="uid://kh5vo2hpln2p" path="res://cursor.png" id="2_ywksp"]
[ext_resource type="AudioStream" uid="uid://ci83xdoxe80uo" path="res://weak_hit.wav" id="4_4kfl5"]
[ext_resource type="AudioStream" uid="uid://cqkg5q81qdthf" path="res://LetterChange.wav" id="5_s552w"]
[ext_resource type="AudioStream" uid="uid://bkk1ryek8tafk" path="res://bonus.wav" id="6_5eiwf"]

[node name="NameEntryScene" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55lrj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.854902, 0.74902, 0.380392, 1)
theme_override_colors/font_shadow_color = Color(0.905882, 0.427451, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.427451, 0.341176, 0.882353, 1)
theme_override_fonts/font = ExtResource("2_o3jn4")
theme_override_font_sizes/font_size = 55
text = "Enter Your Initials"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Label1" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_o3jn4")
theme_override_font_sizes/font_size = 50

[node name="Label2" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_o3jn4")
theme_override_font_sizes/font_size = 50

[node name="Label3" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_o3jn4")
theme_override_font_sizes/font_size = 50

[node name="Cursor" type="Sprite2D" parent="VBoxContainer/CenterContainer"]
position = Vector2(0, -63)
texture = ExtResource("2_ywksp")

[node name="AudioMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4kfl5")

[node name="AudioLetterChange" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_s552w")

[node name="AudioFinished" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5eiwf")
